compiler/tests/ar/errors/print_parens.salam
// لغة: العربية
// توقع: لا يجوز إحاطة وسائط الطباعة
دالة الرئیسیة:
    اطبع (2)
نهاية
